    * full info_map.txt is not called full_info_map.txt
    * new func IndexItemsTable.get_unique_detail_values
    * reimplemented InstlAdmin.do_filter_infomap with new database tables and columns
    * utils.read_file_or_url does some caching if give url, local file and checksum
    * utils.check_file_checksum: prevent reading the file if file_path or expected_checksum is None

10/9/2017 1.6.0.0

    user visible changes:
    * sync will work with non signed urls and cloud front cookies
    * default timeout of 300 seconds (hardcoded) when instl internaly reads urls (not the synced urls which use CURL_MAX_TIME)

    admin visible changes:
    * support separate info_map.txt files for specific iid

27/8/2017 1.5.3.0

    admin visible changes:
    * do_up2s3: better variable names
    * upload_to_s3_aws_for_revision: prepared command to remove uploaded folders, currently only echoed not executed
    * wtar is created as .wtar.aa even if not big enough to be split
    * wtars are not created if there is an existing wtar and contents are identical, if they are created do_wtar will erase previous .wtar files
    * InstlAdmin.stage2svn_for_folder: wtars are not copied or added during stage2svn if there is an existing wtar and contents are identical.
    * above rule applies even when new file is .wtar.aa and old is .wtar
    * InstlAdmin.prepare_limit_list renamed prepare_list_of_dirs_to_work_on
    * new function misc_utils.get_wtar_total_checksum

23/8/2017 1.5.2.8

    user visible changes:
    * Fixed: "have_info_map.txt: No such file or directory" - while in chimera automated testing
    * InstlClientSync.do_sync will call create_no_sync_instructions in case no files needed syncing. This will make sure have_info_map.txt.txt is created even if everything is synced.

22/8/2017 1.5.2.7

    programmer visible changes:
    * check_binaries_versions_in_folder filtering is done with a function instead of directly with regexes

13/8/2017 1.5.2.6
