@@ -581,8 +581,9 @@ class DownloadTool_win_curl(DownloadToolBase):
             retries = var_stack.ResolveVarToStr("CURL_RETRIES", "2")
             retry_delay = var_stack.ResolveVarToStr("CURL_RETRY_DELAY", "8")
 
-            actual_num_files = int(max(0, min(num_urls_to_download, num_files)))
+            sync_urls_cookie = var_stack.ResolveVarToStr("COOKIE_FOR_SYNC_URLS", default=None)
 
+            actual_num_files = int(max(0, min(num_urls_to_download, num_files)))
             num_digits = len(str(actual_num_files))
             file_name_list = ["-".join((curl_config_file_path, str(file_i).zfill(num_digits))) for file_i in range(actual_num_files)]
             wfd_list = list()
@@ -603,6 +604,8 @@ class DownloadTool_win_curl(DownloadToolBase):
                 wfd.write("max-time = {max_time}\n".format(**locals()))
                 wfd.write("retry = {retries}\n".format(**locals()))
                 wfd.write("retry-delay = {retry_delay}\n".format(**locals()))
+                if sync_urls_cookie:
+                    wfd.write("cookie = {sync_urls_cookie}\n".format(**locals()))
                 wfd.write("write-out = \"Progress: ... of ...; " + os.path.basename(wfd.name) + ": " + DownloadToolBase.curl_write_out_str + "\"\n")
                 wfd.write("\n")
                 wfd.write("\n")
